@@ -43,6 +43,10 @@ the code works as expected on your platform:
 
   $ python setup.py test
 
+It is also possible to install only the build slave, installing only the
+parts of Bitten that are needed by clients to run builds:
+
+  $ python setup.py --without-master install
 
 What's left to do now depends on whether you want to use the build master and
 web interface, or just the build slave. In the latter case, you're already
